fix(components): Icon clipping issue

--- a/components/icon/style.css
+++ b/components/icon/style.css
@@ -1,7 +1,6 @@
 /* stylelint-disable property-no-vendor-prefix */
 
 :host {
-  contain: content;
   vertical-align: sub;
 }
 
